funciona boton dropdown

--- a/index.html
+++ b/index.html
@@ -5,13 +5,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <!-- Enlazando css que se llama main.css -->
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="assets/css/main.css">
   <!-- Enlazando tipo de letra "Raleway" -->
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,700" rel="stylesheet">
 
   <title>Capitan </title>
 </head>
 <body>
-
+  <div class="dropdown">Hola Maria
+  	<button onclick="myFunction()" class="dropbtn">&#9776;</button>
+  	<div id="myDropdown" class="dropdown-content">
+  		<a href="#">Perfil</a>
+  		<a href="#l">Salir</a>
+  	</div>
+  </div>
+  <script src="assets\js\drowDown.js" ></script>
 </body>
 </html>
