--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <div class="dropdown">Hola Maria
   	<button onclick="myFunction()" class="dropbtn">&#9776;</button>
   	<div id="myDropdown" class="dropdown-content">
-  		<a href="#">Perfil</a>
-  		<a href="#l">Salir</a>
+  		<a href="coders.html">Perfil</a>
+  		<a href="salir.html">Salir</a>
   	</div>
   </div>
   <script src="assets\js\drowDown.js" ></script>
