--- a/index.html
+++ b/index.html
@@ -26,7 +26,18 @@
     <input type="button" name="sprint1" value="Sprint1">
     <input type="button" name="sprint2" value="Sprint2">
     <input type="button" name="sprint3" value="Sprint3">
-
+  </div>
+  <div id="sprint1">
+    <p> Este es el contenido del Sprint 01</p>
+  </div>
+  <div id="sprint2">
+    <p> Este es el contenido del Sprint 01</p>
+  </div>
+  <div id="evaluacion1">
+    <p> Este es el contenido de la evaluacion 01</p>
+  </div>
+  <div id=evaluacion2>
+    <p> Este es el contenido de la evaluacion 02</p>
   </div>
 
 
