funciona los botones

--- a/index.html
+++ b/index.html
@@ -23,24 +23,23 @@
   <div class="contenedor-contenido-pagina">
     <h3> Que es Laboratoria ??? </h3>
     <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
-    <input type="button" name="sprint1" value="Sprint1">
-    <input type="button" name="sprint2" value="Sprint2">
+    <input type="button" name="sprint1" value="Sprint1" onclick="mostarOcultar()">
+    <input type="button" name="sprint2" value="Sprint2" onclick="mostarOcultar2()">
     <input type="button" name="sprint3" value="Sprint3">
   </div>
-  <div id="sprint1">
+  <div class="contenedor-contenido-pagina" id="sprint1">
     <p> Este es el contenido del Sprint 01</p>
   </div>
-  <div id="sprint2">
-    <p> Este es el contenido del Sprint 01</p>
+  <div class="contenedor-contenido-pagina" id="sprint2">
+    <p> Este es el contenido del Sprint 02</p>
   </div>
-  <div id="evaluacion1">
+  <div class="contenedor-contenido-pagina" id="evaluacion1">
     <p> Este es el contenido de la evaluacion 01</p>
   </div>
-  <div id=evaluacion2>
+  <div class="contenedor-contenido-pagina" id=evaluacion2>
     <p> Este es el contenido de la evaluacion 02</p>
   </div>
-
-
   <script src="assets\js\drowDown.js" ></script>
+  <script src="assets\js\botones.js" ></script>
 </body>
 </html>
