funciona botones calcular evaluacion

--- a/index.html
+++ b/index.html
@@ -28,16 +28,60 @@
     <input type="button" name="sprint3" value="Sprint3">
   </div>
   <div class="contenedor-contenido-pagina" id="sprint1">
-    <p> Este es el contenido del Sprint 01</p>
+    <h3> Sprint 1 : Introduccion a JavaScript </h3>
+    <ol>
+      <li>Fundamentos de Programacion</li>
+      <li>Funciones</li>
+      <li>Arreglos</li>
+      <li>Objetos</li>
+    </ol>
+  </div>
+<hr>
+  <div class="contenedor-contenido-pagina" id="evaluacion1">
+    <h3>Quiz</h3>
+    <h3> Existen dos tipos de funciones </h3>
+    <input type="radio" name=p1>Expresadas y declaradas<br>
+    <input type="radio" name=p1> Explicitas y declaradas <br>
+    <input type="radio" name=p1> Expresadas y derivadas <br>
+    <h3> Elige una propiedad de los arregos </h3>
+    <input type="radio" name=p2>Clear<br>
+    <input type="radio" name=p2> Pop <br>
+    <input type="radio" name=p2>Add<br>
+    <h3> Un objeto tiene ... y ... </h3>
+    <input type="radio" name=p3>numeros y letras<br>
+    <input type="radio" name=p3> partes y validaciones <br>
+    <input type="radio" name=p3>Propiedades y valores<br>
+    <br><button type="button" id="enviar1" name="button">Enviar</button>
   </div>
   <div class="contenedor-contenido-pagina" id="sprint2">
-    <p> Este es el contenido del Sprint 02</p>
+    <h3> Sprint 02 :Introduccion al desarrollo y construccion de paginas web</h3>
+    <ol>
+      <li> Ciclo de Vida del desarrollo web y arquitectura basica cliente / Servidor /configuracion del ambiente de trabajo</li>
+      <li> HTML y Javascript en el navegador</li>
+      <li>Manejo de comandos basicos de git en la terminal</li>
+      <li>Pruebas Unitarias</li>
+      <li>Git/Resolucion de Conflictos/Branching model</li>
+      <li> DOM </li>
+    </ol>
   </div>
-  <div class="contenedor-contenido-pagina" id="evaluacion1">
-    <p> Este es el contenido de la evaluacion 01</p>
-  </div>
+  <hr>
   <div class="contenedor-contenido-pagina" id=evaluacion2>
-    <p> Este es el contenido de la evaluacion 02</p>
+    <h3>Quiz</h3>
+    <h3> Cual es el comando para iniciar un repositorio desde consola ?</h3>
+    <input type="radio" name="pregunta1"> git init. <br>
+    <input type="radio" name="pregunta1"> git init  <br>
+    <input type="radio" name="pregunta1"> git init add  <br>
+
+    <h3> Cual es la finalidad de hacer una prueba unitaria ?</h3>
+    <input type="radio" name="pregunta2"> Comprobar que el codigo funciona correctamente. <br>
+    <input type="radio" name="pregunta2"> Darle valores a los parametros de dichas funciones <br>
+    <input type="radio" name="pregunta2"> No tiene ningun fin  <br>
+
+    <h3> Que significa DOM ?</h3>
+    <input type="radio" name="pregunta3"> Dual Object Model. <br>
+    <input type="radio" name="pregunta3"> Document Object Model <br>
+    <input type="radio" name="pregunta3"> Document Obsolet Model <br>
+    <br><button type="button" id="enviar2" name="button">Enviar</button>
   </div>
   <script src="assets\js\drowDown.js" ></script>
   <script src="assets\js\botones.js" ></script>
